# doc/api.yaml
@@ -106,91 +106,116 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Track'
-  # responses:
-  #   UnauthorizedError:
-  #     description: Access token is missing or invalid
-  # securitySchemes:
-  #   bearerAuth:
-  #     type: http
-  #     scheme: bearer
-  #     bearerFormat: JWT
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 
-# security:
-#   - bearerAuth: []
+security:
+  - bearerAuth: []
 
 paths:
-  # /login:
-  #   post:
-  #     tags:
-  #       - Login
-  #     security: []
-  #     summary: Login
-  #     description: Logins a user and returns a JWT-token
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             title: example
-  #             properties:
-  #               login:
-  #                 type: string
-  #                 description: Username
-  #               password:
-  #                 type: string
-  #                 description: Password
-  #             required:
-  #               - user
-  #               - login
-  #     responses:
-  #       200:
-  #         description: Successful login.
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 token:
-  #                   type: string
-  #               description: JWT Token
-  #       403:
-  #         description: Incorrect login or password
-  # /signup:
-  # post:
-  #   tags:
-  #     - Signup
-  #   security: []
-  #   summary: Signup
-  #   description: Signup a user
-  #   requestBody:
-  #     required: true
-  #     content:
-  #       application/json:
-  #         schema:
-  #           type: object
-  #           title: example
-  #           properties:
-  #             login:
-  #               type: string
-  #               minLength: 3
-  #               maxLength: 255
-  #               description: Username
-  #             password:
-  #               type: string
-  #               format: password
-  #               pattern: ^[a-zA-Z0-9]{3,30}
-  #               description: Password
-  #           required:
-  #             - login
-  #             - password
-  #   responses:
-  #     204:
-  #       description: Successful signup
-  #     400:
-  #       description: Bad request
-  #     409:
-  #       description: Conflict. Login already exists
+  /auth/login:
+    post:
+      tags:
+        - Auth
+      security: []
+      summary: Login
+      description: Logins a user and returns a JWT-token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - password
+                - login
+      responses:
+        200:
+          description: Successful login.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                description: JWT Token
+        400:
+          description: Bad request
+        403:
+          description: Incorrect login or password
+  /auth/signup:
+    post:
+      tags:
+        - Auth
+      security: []
+      summary: Signup
+      description: Signup a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - login
+                - password
+      responses:
+        201:
+          description: Successful signup
+        400:
+          description: Bad request
+        # 409:
+        #   description: Conflict. Login already exists
+  /auth/refresh:
+    post:
+      tags:
+        - Auth
+      security: []
+      summary: Refresh
+      description: Refresh a token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                refreshToken:
+                  type: string
+                  description: Refresh token
+              required:
+                - refreshToken
+      responses:
+        200:
+          description: Successful refreshing
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        403:
+          description: Incorrect login or password
   /user:
     get:
       tags:
@@ -206,8 +231,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Users
